--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,21 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.14.0</version>
+            <version>3.141.59</version>
         </dependency>
-
     </dependencies>
+    <build>
+<plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+            <source>13</source>   <!-- maven.compiler.source  -->
+            <target>13</target> <!-- maven.compiler.target -->
+        </configuration>
+    </plugin>
+</plugins>
+    </build>
+
 </project>
